dtext: fix scrunched table columns.
Fix table columns being collapsed to one character wide in certain
cases. Caused by setting `word-break: break-word` on div.prose, which
was needed to stop very long unbroken strings making columns too wide,
but has the opposite effect of making columns too narrow in other cases.

Example: https://danbooru.donmai.us/forum_topics/13868?page=28#forum_post_164950

--- a/app/javascript/src/styles/common/dtext.scss
+++ b/app/javascript/src/styles/common/dtext.scss
@@ -38,6 +38,12 @@ div.prose {
     padding: $h4_padding;
   }
 
+  table {
+    th {
+      white-space: nowrap;
+    }
+  }
+
   ul {
     margin-left: 1em;
     margin-bottom: 1em;
